# TWISTER-Automation-Library

./: README.md  example.py  oscilloscope_interface.py  pyproject.toml  signalgen_interface.py  twister_utils.py  waveformgen_interface.py
twister_api/: fileio.py  oscilloscope_interface.py  signalgen_interface.py  twister_utils.py  waveformgen_interface.py
